Se maqueta el componente weather-hightlights y hightlights-card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-weather-today></app-weather-today>
 <app-weather-forecast></app-weather-forecast>
+<app-weather-hightlights></app-weather-hightlights>
