Se maqueta el componente footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-weather-today></app-weather-today>
 <app-weather-forecast></app-weather-forecast>
 <app-weather-hightlights></app-weather-hightlights>
+<app-footer></app-footer>
