--- a/src/app/components/weather-hightlights/weather-hightlights.component.html
+++ b/src/app/components/weather-hightlights/weather-hightlights.component.html
@@ -1,5 +1,12 @@
-<div class="grid grid-cols-1 place-items-center gap-y-8">
+<div class="flex flex-col px-5">
 
-  <app-hightlights-card></app-hightlights-card>
+  <span class="text-2xl font-bold mb-8">Today's Hightlights</span>
+
+  <div class="grid grid-cols-1 place-items-center gap-y-8">
+
+    <app-hightlights-card></app-hightlights-card>
+
+  </div>
 
 </div>
+
