--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-menu *ngIf="false"></app-menu>
 <app-weather-today></app-weather-today>
 <app-weather-forecast></app-weather-forecast>
 <app-weather-hightlights></app-weather-hightlights>
