--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="text-sm	font-medium text-gray-2 py-3.5 mt-[4.5rem] flex justify-center">
+<div class="text-sm	font-medium text-gray-2 py-3.5 mt-[4.5rem] lg:mt-0 flex justify-center">
 
   <span>created by <a href="https://github.com/ferneyap17" target="_blank">ferneyap17</a> - devChallenges.io</span>
 
