--- a/src/app/components/weather-hightlights/hightlights-card/hightlights-card.component.html
+++ b/src/app/components/weather-hightlights/hightlights-card/hightlights-card.component.html
@@ -1,4 +1,4 @@
-<div class="bg-dark-2 flex flex-col items-center py-6 w-[20.5rem] ">
+<div class="bg-dark-2 flex flex-col items-center py-6">
 
   <span class="font-medium text-base">Wind status</span>
 
