--- a/src/app/components/weather-today/weather-today.component.html
+++ b/src/app/components/weather-today/weather-today.component.html
@@ -1,4 +1,4 @@
-<div class="bg-dark-2 bg-cloud-bg bg-no-repeat bg-[center_top_4rem]">
+<div class="bg-dark-2 bg-cloud-bg bg-no-repeat bg-[center_top_4rem] h-full">
 
   <div class="flex justify-between px-3 py-4">
     <button class="bg-gray-1 px-5 py-2.5">Search for places</button>
@@ -9,13 +9,13 @@
     <img
       src="./assets/img/Shower.png"
       alt="weather-icon"
-      class="max-h-[10.875rem] my-[3.75rem]"
+      class="max-h-[10.875rem] xl:max-h-full my-[3.75rem] xl:my-20"
     >
     <div>
       <span class="text-[9rem] font-medium">15</span>
       <span class="text-5xl font-light text-gray-2">°C</span>
     </div>
-    <span class="text-4xl font-semibold text-gray-2 mb-12">Shower</span>
+    <span class="text-4xl font-semibold text-gray-2 mb-12 xl:my-[5.375rem]">Shower</span>
     <div class="flex justify-between w-40 mb-[2.125rem] text-lg font-medium text-gray-3">
       <span>Today</span>
       <span>•</span>
