--- a/src/app/components/weather-hightlights/weather-hightlights.component.html
+++ b/src/app/components/weather-hightlights/weather-hightlights.component.html
@@ -1,12 +1,14 @@
-<div class="flex flex-col px-5">
+<div class="flex flex-col px-5 xl:px-[9.625rem]">
 
   <span class="text-2xl font-bold mb-8">Today's Hightlights</span>
 
-  <div class="grid grid-cols-1 place-items-center gap-y-8">
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-y-8 gap-x-12">
 
+    <app-hightlights-card></app-hightlights-card>
+    <app-hightlights-card></app-hightlights-card>
+    <app-hightlights-card></app-hightlights-card>
     <app-hightlights-card></app-hightlights-card>
 
   </div>
 
 </div>
-
