--- a/src/app/components/weather-today/weather-today.component.html
+++ b/src/app/components/weather-today/weather-today.component.html
@@ -1,30 +1,41 @@
-<div class="bg-dark-2 bg-cloud-bg bg-no-repeat bg-[center_top_4rem] h-full">
+<app-menu></app-menu>
 
+<div class="bg-dark-2 bg-cloud-bg h-full bg-[center_top_4rem] bg-no-repeat">
   <div class="flex justify-between px-3 py-4">
-    <button class="bg-gray-1 px-5 py-2.5">Search for places</button>
-    <button class="material-icons bg-gray-1 rounded-full w-10 h-10">gps_fixed</button>
+    <button class="bg-gray-1 px-5 py-2.5" (click)="toggleMenu()">
+      Search for places
+    </button>
+    <button class="material-icons bg-gray-1 h-10 w-10 rounded-full">
+      gps_fixed
+    </button>
   </div>
 
   <div class="flex flex-col items-center">
     <img
-      src="./assets/img/Shower.png"
+      [src]="'./assets/img/'+todayWeather.weather_state_name+'.png'"
       alt="weather-icon"
-      class="max-h-[10.875rem] xl:max-h-full my-[3.75rem] xl:my-20"
-    >
+      class="my-[3.75rem] max-h-[10.875rem] xl:my-20 xl:max-h-full"
+    />
     <div>
-      <span class="text-[9rem] font-medium">15</span>
-      <span class="text-5xl font-light text-gray-2">°C</span>
+      <span 
+        class="text-[9rem] font-medium">{{todayWeather.the_temp | number: '1.0-0'}}</span>
+      <span class="text-gray-2 text-5xl font-light">°C</span>
     </div>
-    <span class="text-4xl font-semibold text-gray-2 mb-12 xl:my-[5.375rem]">Shower</span>
-    <div class="flex justify-between w-40 mb-[2.125rem] text-lg font-medium text-gray-3">
+    <span class="text-gray-2 mb-12 text-4xl font-semibold xl:my-[5.375rem]"
+      >{{todayWeather.weather_state_name}}</span
+    >
+    <div
+      class="text-gray-3 mb-[2.125rem] flex w-40 justify-between text-lg font-medium"
+    >
       <span>Today</span>
       <span>•</span>
-      <span>Fri, 5 Jun</span>
+      <span>{{todayWeather.applicable_date | date: 'EE, d MMM'}}</span>
     </div>
-    <div class="flex items-center text-lg font-semibold text-gray-3 mb-[6.625rem]">
+    <div
+      class="text-gray-3 mb-[6.625rem] flex items-center text-lg font-semibold"
+    >
       <span class="material-icons">place</span>
-      <span>Helsinki</span>
+      <span>{{city}}</span>
     </div>
   </div>
-
 </div>
