--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div #menu class="bg-dark-2 p-3 h-screen fixed left-full w-full lg:w-[35%]">
+<div #menu class="bg-dark-2 p-3 h-screen fixed left-full w-full lg:w-2/6">
 
   <div class="flex justify-end mb-[1.875rem]">
     <button class="flex items-center">
