--- a/src/app/components/weather-forecast/weather-card/weather-card.component.html
+++ b/src/app/components/weather-forecast/weather-card/weather-card.component.html
@@ -1,4 +1,4 @@
-<div class="bg-dark-2 text-base h-44 font-medium flex flex-col justify-around items-center">
+<div class="bg-dark-2 text-base h-44 font-medium flex flex-col justify-around items-center rounded-sm">
 
   <span>{{weather.applicable_date | date:'ccc, d MMM' }}</span>
 
