--- a/src/app/components/weather-forecast/weather-forecast.component.html
+++ b/src/app/components/weather-forecast/weather-forecast.component.html
@@ -1,14 +1,4 @@
-<div class="
-    grid grid-cols-2
-    sm:grid-cols-3
-    lg:grid-cols-5
-    gap-y-8
-    lg:p-6
-    xl:pt-[9.25rem]
-    xl:px-[9.625rem]
-    gap-x-[1.625rem]
-    p-[3.375rem]"
->
+<div class="grid-card p-5">
 
   <app-weather-card
     *ngFor="let weather of weathers"
